GNOME Bugzilla – Bug 768666
motioncells: motionmaskcoords does not work on start
Last modified: 2017-05-18 11:48:06 UTC
Example pipeline: gst-launch-1.0 videotestsrc pattern=18 ! videorate ! videoscale ! video/x-raw,width=320,height=240,framerate=15/1 ! videoconvert ! motioncells motionmaskcoords=0:0:100:100 ! videoconvert ! glimagesink motionmaskcoords is not applied on start because gst_motion_cells_handle_sink_event will come after gst_motion_cells_set_property. and at the moment of set there is no information about resolution. and initial mask is set as -1:-1:-1:-1
Created attachment 351313 [details] [review] fix for 1.8.3 Should work on master, Need to check
Thanks, pushed to master: commit f0a75cf0294072c93be35b9c16ac7be591986fa8 Author: Dmitry Zhadinets <dzhadinets@gmail.com> Date: Sun May 7 19:50:00 2017 +0000 motioncells: delay motionmaskcoords until caps arrive motionmaskcoords is not applied on start because the information about resolution isn't available until caps arrive. https://bugzilla.gnome.org/show_bug.cgi?id=768666 There's still a slight limitation in that the mask might not be correct if incoming caps changes, but it's no worse in that regard than the previous code, so it's only a possible enhancement.